# lambdaworks_plonk_prover

./: .gitignore  404.html  Cargo.toml  README.md  implementation.html  index.html  print.html  protocol.html  recap.html  searchindex.js  searchindex.json
.github/workflows/: gh-pages.yml  mdbook.yml
benches/: criterion_plonk.rs
benches/plonk_circuits/: square_and_multiply_128.json  square_and_multiply_2.json  square_and_multiply_2048.json  square_and_multiply_32.json  square_and_multiply_64.json  square_and_multiply_8.json
docs/: book.toml
docs/src/: SUMMARY.md  constraint_system.md
src/: frontend.rs  lib.rs  prover.rs  setup.rs  verifier.rs
src/constraint_system/: conditional.rs  errors.rs  frontend.rs  mod.rs  operations.rs  solver.rs  types.rs
src/constraint_system/examples/: mimc.rs  mod.rs  pow.rs
src/test_utils/: circuit_1.rs  circuit_2.rs  circuit_json.rs  utils.rs
