[package]
name = "lambdaworks-plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"]} 
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", rev = "943963c" }
lambdaworks-crypto = { git = "https://github.com/lambdaclass/lambdaworks", rev = "943963c" }

thiserror = "1.0.38"

serde_json = "1.0"

