[package]
name = "lambdaworks-plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]} 
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", rev = "9d3cde6c31c43591cda746f7bbc5b5d41af0af22" }
lambdaworks-crypto = { git = "https://github.com/lambdaclass/lambdaworks", rev = "9d3cde6c31c43591cda746f7bbc5b5d41af0af22" }

thiserror = "1.0.38"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "criterion_plonk"
harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

